# masters_io

./: .gitignore  CLAUDE.md  Masters IO dates.xlsx  pyproject.toml
docs/plans/: 2026-01-04-slide-expansion.md  2026-01-04-slide-outlines.md
exams/final/: final.tex  final_solutions.tex
exams/midterm/: midterm.tex  midterm_solutions.tex
exams/practice_final/: practice_final.tex  practice_final_solutions.tex
exams/practice_midterm/: practice_midterm.tex  practice_midterm_solutions.tex
homework/hw1/: hw1.tex  hw1_solutions.py  hw1_solutions.tex
homework/hw2/: hw2.tex  hw2_solutions.py  hw2_solutions.tex
previous_courses/hector_course/markdown/: Adverse_Selection.md  Chade ECN532_Syllabus.md  Dynamic_Games_Complete_Information.md  Moral_Hazard.md  Oligopoly.md  Static_Games_Complete_Info.md
previous_courses/phd_io/: syllabus.tex
previous_courses/phd_io/demand_estimation/: introduction.tex  (+5 more)
previous_courses/undergraduate_io/: syllabus.tex
scripts/: convert_pdfs_to_md.py  lecture_03_pyblp_demo.py
slides/: preamble.tex  preamble_packages.tex
slides/lecture_01/: lecture_01.tex
slides/lecture_02/: lecture_02.tex
slides/lecture_03/: lecture_03.tex  lecture_03.vrb
slides/lecture_04/: lecture_04.tex
slides/lecture_05/: lecture_05.tex
slides/lecture_06/: lecture_06.tex
slides/lecture_08/: lecture_08.tex
slides/lecture_09/: lecture_09.tex
slides/lecture_10/: lecture_10.tex
slides/lecture_11/: lecture_11.tex
slides/lecture_12/: lecture_12.tex
slides/lecture_13/: lecture_13.tex
syllabus/: syllabus.fdb_latexmk  syllabus.fls  syllabus.tex
(+97 files in other folders)
