[project]
name = "masters-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pyblp>=1.1.2",
    "pymupdf>=1.26.7",
    "pymupdf4llm>=0.2.8",
    "pypdf>=6.5.0",
    "statsmodels>=0.14.6",
]
